adapt ConformanceProvider